--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -2,13 +2,24 @@
 import Comment from "../components/Comment";
 import { formatDate } from "../utils/formatDate";
 import PageLayout from "./PageLayout.astro";
+import AtricleLayout from "./ArticleLayout.astro";
 
 const { postData } = Astro.props;
 const { Content } = await postData.render();
 ---
 
-<PageLayout title = {postData.data.title}>
-    <article class="prose max-w-none prose-post dark:prose-invert">
+<PageLayout pageName = "post" title = {postData.data.title}>
+
+    <nav id="PostCatalog" class="sticky top-12 mb-6 px-2.5 rounded-lg bg-neutral-100/70 backdrop-blur-xl z-[99998] dark:bg-neutral-800/70">
+        <ul class="text-sm break-all max-h-64 overflow-hidden overflow-y-scroll list-disc list-outside ps-5 py-2.5 marker:text-neutral-400 hover:*:text-blue-500">
+            <li><a href="#">标题</a></li>
+        </ul>
+    </nav>
+
+    
+
+
+    <AtricleLayout>
         <header class="mb-8">
             <h1 class="text-2xl mb-2" transition:name={postData.slug}>{postData.data.title}</h1>
             <time datetime={postData.data.date.toString()} class="text-sm text-neutral-500 dark:text-neutral-600">{formatDate(postData.data.date, true)}</time>
@@ -22,10 +33,10 @@ const { Content } = await postData.render();
                 <div class="border-t border-dashed border-neutral-400 w-full dark:border-neutral-600"></div>
             </div>
             <div class="text-sm text-justify text-neutral-500 dark:text-neutral-600">
-                <p>如未另行说明，那么本页面中的内容已根据知识共享署名 4.0 许可获得了许可，并且代码示例已根据 Apache 2.0 许可获得了许可。若本文未声明禁止转载，你可以在标明署名和来源的前提下转载这篇文章。</p>
+                <p>如未另行说明，那么本页面中的内容已根据知识共享署名 4.0 许可获得了许可，并且代码示例已根据 Apache 2.0 许可获得了许可。</p>
                 {postData.data.upDate && <p>最后更新时间 (UTC+8)：<time datetime={postData.data.upDate.toString()}>{formatDate(postData.data.upDate, true)}</time></p>}
             </div>
         </footer>
-    </article>
+    </AtricleLayout>
     <Comment client:load/>
 </PageLayout>
