--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ const blog = (await getCollection("blog"))
 
 ---
 
-<PageLayout>
+<PageLayout pageName="index">
 
 <section class="space-y-8">
     {blog.map(post => (
