--- a/src/layouts/MarkdownLayout.astro
+++ b/src/layouts/MarkdownLayout.astro
@@ -1,11 +1,12 @@
 ---
+import ArticleLayout from "./ArticleLayout.astro";
 import PageLayout from "./PageLayout.astro";
 
 const { frontmatter  } = Astro.props
 ---
 
 <PageLayout title = {frontmatter.title}>
-    <article class="prose max-w-none prose-post dark:prose-invert">
+    <ArticleLayout>
         <slot />
-    </article>
+    </ArticleLayout>
 </PageLayout>
