--- a/src/components/BlogCatalog.astro
+++ b/src/components/BlogCatalog.astro
@@ -1,5 +1,5 @@
 <nav id="PostCatalog" class="hidden sticky top-12 mb-6 px-2.5 rounded-lg bg-neutral-100/70 backdrop-blur-xl z-[99998] dark:bg-neutral-800/70">
-    <ul id="PostCatalogList" class="text-sm break-all max-h-64 overflow-hidden overflow-y-scroll list-disc list-outside space-y-2 ps-5 py-2.5 marker:text-neutral-400 hover:*:text-blue-500">
+    <ul id="PostCatalogList" class="text-sm break-all max-h-64 max-w-full overflow-hidden overflow-y-scroll list-disc list-outside space-y-2 ps-5 py-2.5 marker:text-neutral-400 hover:*:text-blue-500">
         
     </ul>
 </nav>
@@ -34,6 +34,12 @@
             }else{
                 PostCatalogListElement.innerHTML="没有目录"
             }
+
+            document.getElementById('PostCatalog').addEventListener('click', function(e){
+                if(e.target.tagName === 'A'){
+                    document.getElementById('PostCatalog').classList.add('hidden')
+                }
+            })
             
         }
     });
