--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,14 +1,12 @@
 ---
-import { NavLinks } from "../consts";
-
-
+import { NAVLINKS } from "../consts";
 ---
 
 <footer class="border-t border-neutral-200/70 dark:border-neutral-800/70">
     <div class="container mx-auto p-8 space-y-4">
         <nav class="flex flex-wrap gap-1.5 text-sm hover:*:text-blue-500">
-            {NavLinks.map((link) => (
-                <a href={link.url}>{link.name}</a>
+            {NAVLINKS.map((link) => (
+                <a href={link.HREF}>{link.NAME}</a>
             ))}
         </nav>
         <div class="text-xs text-neutral-500 dark:text-neutral-600">
