--- a/src/layouts/ArticleLayout.astro
+++ b/src/layouts/ArticleLayout.astro
@@ -1,3 +1,8 @@
-<article class="prose max-w-none prose-post prose-p:text-justify dark:prose-invert prose-headings:before:block prose-headings:before:h-14 prose-headings:before:-mt-14 prose-headings:before:invisible prose-a:underline-offset-4 prose-a:decoration-dotted prose-a:decoration-1">
+<article class="
+prose max-w-none prose-post prose-p:text-justify dark:prose-invert 
+prose-headings:before:block prose-headings:before:h-14 prose-headings:before:-mt-14 prose-headings:before:invisible 
+prose-a:underline-offset-4 prose-a:decoration-dotted prose-a:decoration-1 hover:prose-a:text-blue-500 after:prose-a:content-['_↗'] after:prose-a:text-xs
+prose-blockquote:not-italic
+">
     <slot />
 </article>
