--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -19,7 +19,7 @@ const { pageName, title, description } = Astro.props;
 
     <Header pageName = {pageName} />
 
-    <main class="container mx-auto px-8 py-16">
+    <main id="main" class="container mx-auto px-8 py-16 blur">
         <slot />
     </main>
 
