--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,7 +11,7 @@ const { pageName } = Astro.props;
     <div class="container mx-auto px-8 py-2.5">
         <div class="flex justify-between items-center">
             <h1 class="flex items-center">
-                <a href="/">{SITE.title}</a>
+                <a href="/">{SITE.TITLE}</a>
                 <span id="loadingIcon" class="ml-1.5 p-1 rounded-md">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-3 animate-spin">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0 3.181 3.183a8.25 8.25 0 0 0 13.803-3.7M4.031 9.865a8.25 8.25 0 0 1 13.803-3.7l3.181 3.182m0-4.991v4.99" />
@@ -21,7 +21,7 @@ const { pageName } = Astro.props;
             <div class="flex items-center gap-2">
                 <HeaderButtonBackToTop />
                 {pageName !== 'index' && <HeaderButtonBack />}
-                {pageName === 'index' && <HeaderAvatar avatar={SITE.avatar} />}
+                {pageName === 'index' && <HeaderAvatar avatar={SITE.AVATAR} />}
             </div>
         </div>
     </div>
@@ -42,7 +42,7 @@ const { pageName } = Astro.props;
         stickyHeader(headerElement, HeaderButtonBackToTopElement, avatarElement);
     }
 
-    function stickyHeader(headerElement, HeaderButtonBackToTopElement, avatarElement){
+    function stickyHeader(headerElement: HTMLElement, HeaderButtonBackToTopElement: HTMLElement, avatarElement: HTMLElement){
         const stickyHeaderClass = [
             'border-b',
             'border-neutral-200/70',
@@ -71,7 +71,7 @@ const { pageName } = Astro.props;
         }, { passive: true })
     }
 
-    function scrollToTop(event) {
+    function scrollToTop(event: MouseEvent) {
         event.preventDefault();
         window.scrollTo({
             top: 0,
@@ -79,7 +79,7 @@ const { pageName } = Astro.props;
         });
     }
 
-    function postCatalog(event){
+    function postCatalog(event: MouseEvent){
         let PostCatalogElement = document.getElementById('PostCatalog');
         if(PostCatalogElement.classList.contains('hidden')){
             PostCatalogElement.classList.remove('hidden');
@@ -88,10 +88,14 @@ const { pageName } = Astro.props;
         }
     }
 
-    
-
     document.addEventListener('DOMContentLoaded', () => initHeader());
     document.addEventListener('astro:after-swap', () => initHeader());
-    document.addEventListener('astro:page-load', () => document.getElementById('loadingIcon').style.display = 'none');
-    document.addEventListener('astro:before-preparation', () => document.getElementById('loadingIcon').style.display = 'block');
+    document.addEventListener('astro:page-load', () => {
+        document.getElementById('loadingIcon').style.display = 'none'
+        document.getElementById('main').classList.remove('blur')
+    });
+    document.addEventListener('astro:before-preparation', () => {
+        document.getElementById('loadingIcon').style.display = 'block'
+        document.getElementById('main').classList.add('blur')
+    });
 </script>
