--- a/src/layouts/MarkdownLayout.astro
+++ b/src/layouts/MarkdownLayout.astro
@@ -5,7 +5,7 @@ import PageLayout from "./PageLayout.astro";
 const { frontmatter  } = Astro.props
 ---
 
-<PageLayout title = {frontmatter.title}>
+<PageLayout title = {frontmatter.title} description = {frontmatter.description}>
     <ArticleLayout>
         <slot />
     </ArticleLayout>
