--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -11,8 +11,8 @@ const { Content } = await postData.render();
 <PageLayout pageName = "post" title = {postData.data.title}>
 
     <AtricleLayout>
-        <h1 class="text-2xl mb-2" transition:name={postData.slug}>{postData.data.title}</h1>
-        <section class="mb-8">
+        <h1 class="text-2xl mb-0" transition:name={postData.slug}>{postData.data.title}</h1>
+        <section class="mb-4 mt-2">
             <time datetime={postData.data.date.toString().slice(0,10)} class="text-sm text-neutral-500 dark:text-neutral-600">{formatDate(postData.data.date, 'zh')}</time>
         </section>
 
