--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -11,25 +11,27 @@ const { Content } = await postData.render();
 <PageLayout pageName = "post" title = {postData.data.title}>
 
     <AtricleLayout>
-        <h1 class="text-2xl mb-0" transition:name={postData.slug}>{postData.data.title}</h1>
-        <section class="mb-4 mt-2">
+        <header class="mb-4">
+            <h1 class="text-2xl mb-2" transition:name={postData.slug}>{postData.data.title}</h1>
             <time datetime={postData.data.date.toString().slice(0,10)} class="text-sm text-neutral-500 dark:text-neutral-600">{formatDate(postData.data.date, 'zh')}</time>
-        </section>
+        
+        </header>
 
-        <Content />
-
+        <div id="PostContent">
+            <Content />
+        </div>
+        
+        <footer class="my-16 text-neutral-500 dark:text-neutral-600">
+            <div class="flex items-center">
+                <div class="text-xs rounded-full border border-neutral-400 px-2 shrink-0 dark:border-neutral-600">End of reading</div>
+                <div class="border-t border-dashed border-neutral-400 w-full dark:border-neutral-600"></div>
+            </div>
+            <div class="text-sm text-justify *:my-5">
+                <p>如未另行说明，那么本页面中的内容已根据知识共享署名 4.0 许可获得了许可，并且代码示例已根据 Apache 2.0 许可获得了许可。</p>
+                {postData.data.updateDate && <p>最后更新时间 (UTC+8)：<time datetime={formatDate(postData.data.updateDate,  "datetime")}>{formatDate(postData.data.updateDate, 'zh')}</time></p>}
+            </div>
+        </footer>
     </AtricleLayout>
-
-    <section class="my-16 text-neutral-500 dark:text-neutral-600">
-        <div class="flex items-center">
-            <div class="text-xs rounded-full border border-neutral-400 px-2 shrink-0 dark:border-neutral-600">End of reading</div>
-            <div class="border-t border-dashed border-neutral-400 w-full dark:border-neutral-600"></div>
-        </div>
-        <div class="text-sm text-justify *:my-5">
-            <p>如未另行说明，那么本页面中的内容已根据知识共享署名 4.0 许可获得了许可，并且代码示例已根据 Apache 2.0 许可获得了许可。</p>
-            {postData.data.updateDate && <p>最后更新时间 (UTC+8)：<time datetime={formatDate(postData.data.updateDate,  "datetime")}>{formatDate(postData.data.updateDate, 'zh')}</time></p>}
-        </div>
-    </section>
 
     <Comment client:load/>
 
