--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -20,11 +20,8 @@ const { Content } = await postData.render();
         <div id="PostContent">
             <Content />
         </div>
-        
-        
-    </AtricleLayout>
 
-        <section class="my-16 text-neutral-500 dark:text-neutral-600">
+        <footer class="my-16 text-neutral-500 dark:text-neutral-600">
             <div class="flex items-center">
                 <div class="text-xs rounded-full border border-neutral-400 px-2 shrink-0 dark:border-neutral-600">End of reading</div>
                 <div class="border-t border-dashed border-neutral-400 w-full dark:border-neutral-600"></div>
@@ -33,9 +30,9 @@ const { Content } = await postData.render();
                 <p>如未另行说明，那么本页面中的内容已根据知识共享署名 4.0 许可获得了许可，并且代码示例已根据 Apache 2.0 许可获得了许可。</p>
                 {postData.data.updateDate && <p>最后更新时间 (UTC+8)：<time datetime={formatDate(postData.data.updateDate,  "datetime")}>{formatDate(postData.data.updateDate, 'zh')}</time></p>}
             </div>
-        </section>
-
-
+        </footer>
+        
+    </AtricleLayout>
 
     <Comment client:load/>
 
