--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -12,5 +12,5 @@ const { entry } = Astro.props;
 
 <article class="flex flex-col">
     <h3><a href={`/${entry.collection}/${entry.slug}`} class="hover:text-blue-500" transition:name={entry.slug}>{entry.data.title}</a></h3>
-    <time datetime={formatDate(entry.data.date,  "datetime")} class="text-xs text-neutral-500 dark:text-neutral-600">{formatDate(entry.data.date)}</time>
+    <time datetime={entry.data.date.toISOString()} class="text-xs text-neutral-500 dark:text-neutral-600">{formatDate(entry.data.date)}</time>
 </article>
