--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -37,7 +37,7 @@ const { Content } = await postData.render();
 
     <section>
         <h2 class="sr-only">留言</h2>
-         <Comments client:load/>
+         <Comments />
     </section>
 
 </PageLayout>
