--- a/src/components/BlogCatalog.astro
+++ b/src/components/BlogCatalog.astro
@@ -7,7 +7,7 @@
     </details>
 </nav>
 
-<script is:inline>
+<script>
     document.addEventListener('astro:page-load', function(){
         const postContent =document.getElementById('PostContent');
         const postCatalog =document.getElementById('PostCatalog');
