--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -92,10 +92,10 @@ const { pageName } = Astro.props;
     document.addEventListener('astro:after-swap', () => initHeader());
     document.addEventListener('astro:page-load', () => {
         document.getElementById('loadingIcon').style.display = 'none'
-        // document.getElementById('main').classList.remove('blur')
+        document.getElementById('main').classList.remove('blur')
     });
     document.addEventListener('astro:before-preparation', () => {
         document.getElementById('loadingIcon').style.display = 'block'
-        // document.getElementById('main').classList.add('blur')
+        document.getElementById('main').classList.add('blur')
     });
 </script>
