--- a/src/components/Comments.astro
+++ b/src/components/Comments.astro
@@ -1,4 +1,4 @@
-<div class="giscus "></div>
+<div class="giscus">正在加载评论组件...</div>
 
 <script src="https://giscus.app/client.js"
         data-repo="ymc0182/myblog"
