--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -19,12 +19,21 @@ const { title, description } = Astro.props;
 <ClientRouter />
 
 <script>
-    function init(){
+    const init = () => {
+        let headerElement = document.getElementById('header');
+        let avatarElement = document.getElementById('avatar');
+        let HeaderButtonBackToTopElement = document.getElementById('HeaderButtonBackToTop');
+        let HeaderButtonBackElement = document.getElementById('HeaderButtonBack');
+
+        HeaderButtonBackToTopElement?.addEventListener('click', (event) => scrollToTop(event));
+        HeaderButtonBackElement?.addEventListener('click', () => window.history.back());
+
+        stickyHeader(headerElement, HeaderButtonBackToTopElement, avatarElement);
         updateTheme();
         window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', updateTheme);
     }
 
-    function updateTheme() {
+    const updateTheme = () => {
         if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
             document.documentElement.classList.add('dark');
         } else {
@@ -32,8 +41,52 @@ const { title, description } = Astro.props;
         }
     }
 
-    document.addEventListener('DOMContentLoaded', () => init());
+    const stickyHeader = (headerElement: HTMLElement, HeaderButtonBackToTopElement: HTMLElement, avatarElement: HTMLElement) => {
+        const stickyHeaderClass = [
+            'border-b',
+            'border-neutral-200/70',
+            'backdrop-blur-lg',
+            'bg-white/70',
+            'dark:border-neutral-800/70',
+            'dark:bg-neutral-900/70',
+        ];
+        const unstickyHeaderClass = [
+            'border-transparent',
+        ];
+        window.addEventListener('scroll', function() {
+            if (window.scrollY > 16) {
+                headerElement.classList.add(...stickyHeaderClass);
+                headerElement.classList.remove(...unstickyHeaderClass);
+
+                HeaderButtonBackToTopElement.classList.add('flex');
+                HeaderButtonBackToTopElement.classList.remove('hidden');
+            } else {
+                headerElement.classList.add(...unstickyHeaderClass);
+                headerElement.classList.remove(...stickyHeaderClass);
+
+                HeaderButtonBackToTopElement.classList.add('hidden');
+                HeaderButtonBackToTopElement.classList.remove('flex');
+            }
+        }, { passive: true })
+    }
+
+    const scrollToTop = (event: MouseEvent) => {
+        event.preventDefault();
+        window.scrollTo({
+            top: 0,
+            behavior: "smooth"
+        });
+    }
+
     document.addEventListener('astro:after-swap', () => init());
+    document.addEventListener('astro:before-preparation', () => {
+        document.getElementById('loadingIcon').style.display = 'block'
+        document.getElementById('main').classList.add('blur')
+    });
+    document.addEventListener('astro:page-load', () => {
+        document.getElementById('loadingIcon').style.display = 'none'
+        document.getElementById('main').classList.remove('blur')
+    });
     document.body.addEventListener('touchstart', () => {}, { passive: true });
 </script>
 
