--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -98,7 +98,7 @@ const { title, description } = Astro.props;
 		font-display: swap;
 	}
     body {
-		/* font-family: 'zql',"Arial", "Microsoft YaHei", "黑体", "宋体", sans-serif; 
-        font-weight: 400; */
+		font-family: 'zql',"Arial", "Microsoft YaHei", "黑体", "宋体", sans-serif; 
+        font-weight: 400;
 	}
 </style>
