--- a/src/components/HeaderAvatar.astro
+++ b/src/components/HeaderAvatar.astro
@@ -1,4 +1,4 @@
 ---
 const { avatar } = Astro.props
 ---
-<img id="avatar" class="h-6 w-6 rounded-lg overflow-hidden aspect-square" loading="lazy" alt="avatar" src={avatar}>
+<a href="/about" title="关于"><img id="avatar" class="h-6 w-6 rounded-lg overflow-hidden aspect-square" loading="lazy" alt="avatar" src={avatar}></a>
