--- a/src/layouts/ArticleLayout.astro
+++ b/src/layouts/ArticleLayout.astro
@@ -2,7 +2,7 @@
 
 <article class="
 prose max-w-none prose-post prose-p:text-justify dark:prose-invert 
-prose-a:underline-offset-4 prose-a:decoration-dotted prose-a:decoration-1 hover:prose-a:text-blue-500 after:prose-a:content-['_↗'] after:prose-a:text-xs
+prose-a:underline-offset-4 prose-a:decoration-dotted prose-a:decoration-1 prose-a:hover:text-blue-500 prose-a:after:content-['_↗'] prose-a:after:text-xs
 prose-blockquote:not-italic
 ">
     <slot />
